--- a/banking.html
+++ b/banking.html
@@ -16,7 +16,7 @@
     <body>
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-                <a class="navbar-brand" href="#"><img class="corefactors-logo" src="./src/companyLogo/logo-blue.png" alt="corefactorlogo"></a>
+                <a class="navbar-brand" href="#"><img class="corefactors-logo" src="https://d2woyw6vp5g0b2.cloudfront.net/images/logo-blue.png" alt="corefactorlogo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
